--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hono",
+  "name": "@ibash/hono",
   "version": "4.2.4",
   "description": "Ultrafast web framework for the Edges",
   "main": "dist/cjs/index.js",
